--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,119 @@
-এখানে আপনার ফেসবুক আইডির কুকি বসান ✅
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261579992914735%22%3A%22SQaN5qgy%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-09-04T09:22:23.241Z",
+        "lastAccessed": "2025-09-04T09:22:23.241Z"
+    },
+    {
+        "key": "datr",
+        "value": "mhy5aAloW71IC95p5dzmMzZY",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-04T09:22:23.241Z",
+        "lastAccessed": "2025-09-04T09:22:23.241Z"
+    },
+    {
+        "key": "sb",
+        "value": "mhy5aDi6WliTqXB30MZNoOX9",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-04T09:22:23.241Z",
+        "lastAccessed": "2025-09-04T09:22:23.241Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61579992914735",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-04T09:22:23.241Z",
+        "lastAccessed": "2025-09-04T09:22:23.241Z"
+    },
+    {
+        "key": "xs",
+        "value": "45%3Am4-5J97AjisyDw%3A2%3A1756961971%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-04T09:22:23.241Z",
+        "lastAccessed": "2025-09-04T09:22:23.241Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-04T09:22:23.241Z",
+        "lastAccessed": "2025-09-04T09:22:23.241Z"
+    },
+    {
+        "key": "pas",
+        "value": "61579992914735%3AVmDGJVKzqO",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-04T09:22:23.241Z",
+        "lastAccessed": "2025-09-04T09:22:23.241Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B763x393x2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-04T09:22:23.241Z",
+        "lastAccessed": "2025-09-04T09:22:23.241Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-04T09:22:23.241Z",
+        "lastAccessed": "2025-09-04T09:22:23.241Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-04T09:22:23.241Z",
+        "lastAccessed": "2025-09-04T09:22:23.241Z"
+    },
+    {
+        "key": "fr",
+        "value": "0k0SL5WNjfOEJSCLP.AWcqQ5kjSlcj9Dtcv50l7HdxjMeeloMCM43GkVbd9HfjhwAZsjU.BouRya..AAA.0.0.BouVgB.AWfIZqVsfv-qLOc5REezlNrsCZk",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-04T09:22:23.241Z",
+        "lastAccessed": "2025-09-04T09:22:23.241Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2913%3Btimestamp%3A1756977153",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-04T09:22:23.241Z",
+        "lastAccessed": "2025-09-04T09:22:23.241Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101417821%3BT%3A29282952",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-04T09:22:23.241Z",
+        "lastAccessed": "2025-09-04T09:22:23.241Z"
+    }
+]
